[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "StUser"
version = '0.0.1'
description = 'User registration, login and associated ecosystem for Streamlit'
authors = [
    {name = 'Alex Melesko', email='alex.melesko@msquaredds.com'}
]
license = {file = 'LICENSE'}
requires-python = '>=3.6'
dependencies = [
    "argon2-cffi >= 23.1.0",
    "crcmod >= 1.7",
    "cryptography >= 43.0.3",
    "db-dtypes >= 1.3.1",
    "pandas >= 2.2.3",
    "sendgrid >= 6.11.0",
    "streamlit >= 1.40.0"
]
keywords = ['Python', 'Streamlit', 'Authentication', 'Components']
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3"
]

[project.optional-dependencies]
google = [
    "google-api-python-client >= 2.153.0",
    "google-auth >= 2.36.0",
    "google-auth-httplib2 >= 0.2.0",
    "google-auth-oauthlib >= 1.2.1",
    "google-cloud-kms >= 3.1.0"
]

[project.urls]
'main repository' = 'https://github.com/msquaredds/StUser'
'test repository' = 'https://github.com/msquaredds/StreamlitAuth'

[tool.setuptools]
packages = ["StUser"]

[tool.setuptools.dynamic]
readme = {file = "README.md"}