[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stuser"
version = '0.0.1'
description = 'User registration, login and associated ecosystem for Streamlit'
authors = [
    {name = 'Alex Melesko', email='alex.melesko@msquaredds.com'}
]
license = {file = 'LICENSE'}
requires-python = '>=3.6'
dependencies = [
    "argon2-cffi >= 23.1.0",
    "crcmod >= 1.7",
    "cryptography >= 43.0.3",
    "pandas >= 2.2.3",
    "streamlit >= 1.40.0"
]
keywords = ['Python', 'Streamlit', 'Authentication', 'Components']
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3"
]

[project.optional-dependencies]
google = [
    "db-dtypes >= 1.3.1",
    "google-api-python-client >= 2.153.0",
    "google-auth >= 2.36.0",
    "google-auth-httplib2 >= 0.2.0",
    "google-auth-oauthlib >= 1.2.1",
    "google-cloud-bigquery >= 3.27.0"
]
sendgrid = [
    "sendgrid >= 6.11.0"
]

[project.urls]
'repository' = 'https://github.com/msquaredds/StUser'

[tool.setuptools]
packages = ["stuser"]

[tool.setuptools.dynamic]
readme = {file = "README.md"}